Fix footer overflow in mobile

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -103,7 +103,7 @@ footer ul{
     align-items: center;
     padding: 0 1.5em;
     margin: 0;
-    height: 5vh;
+    min-height: 5vh;
 }
 
 a {
